# ParaTool

./: README.md
src/paratool/: prefix_scan.hpp  sort.hpp  unique.hpp
test/: CMakeLists.txt  main.cpp  prefix_scan.cpp  sort.cpp  unique.cpp
